# jerzh.github.io

./: .gitignore  Gemfile  README.md  _config.yml  about.markdown  blog.markdown  build.sh  coursework.md  index.markdown  package-lock.json  package.json  projects.md  todo.markdown  tsconfig.json  webpack.config.js
_drafts/: a-life-in-data.md  alg-geo-examples.md  bookstores.md  building-an-identity.md  economics.md  julia-lang.md  max-flow-examples.md  non-asymptotic-stats.md  snare-drumming.md  the-classical-greats.md
_includes/: footer.html  head.html  social.html
_layouts/: blog.html  default.html  home.html  page.html
_posts/: 2021-12-08-site-running.markdown  2021-12-09-algebraic-topology.markdown  2021-12-10-algebraic-topology.markdown  2021-12-11-iv-regression.markdown  2021-12-12-linguistics.markdown  2021-12-14-pytorch-test.markdown  2021-12-22-poi-spinning.markdown  2022-01-27-baba-is-you.markdown  2022-01-30-return-of-scenic-pond.md  2022-02-10-js-includes.md  2022-02-11-scheme-intuition.md  2022-02-26-docker.md  2022-03-19-building-an-identity.md  2022-03-20-max-flow-examples.md  2022-03-21-economics.md  2022-03-21-julia-lang.md  2022-03-25-beatboxing.md  2022-03-25-snare-drumming.md  2023-04-30-fireshow.md  2023-05-01-metacommentary.md  2023-05-01-mini-librarian.md  2023-05-01-the-classical-greats.md  2023-07-26-non-asymptotic-stats.md
_sass/: minima.scss
assets/: blog-data.js  blog-data.json.liquid  blog.js  general.scss
js/: blog-data.js  blog-data.js.liquid  blog.js  (+3 more)
wasm/domain-coloring/: Cargo.toml
wasm/domain-coloring/src/: lib.rs
(+13 files in other folders)
